--- a/index.html
+++ b/index.html
@@ -40,6 +40,24 @@
             <section class="edu">
                  <h1>Educational Background</h1>
                  <p>Below are details of where I studied and what I've studied to date</p>
+
+                 <div class="row">
+                     <div class="edu-col">
+                         <h3>High School</h3>
+                         <p>For my four High School years I studied in Precious Blood Riruta which is located in heart of Kawangware,Nairobi.I was admitted in PB after completing my Primary education at Lizar Schools Naivasha in 2015.</p>
+                     </div>
+
+                     <div class="edu-col">
+                        <h3>University</h3>
+                        <p>I am currently undertaking my Bachelor's Degree in Telecommunication at Kabarak University.Telecommunications is the means of electronic transmission of information over distances. The information may be in the form of voice telephone calls, data, text, images, or video. These networks themselves are run by computers.</p>
+                    </div>
+
+                    <div class="edu-col">
+                        <h3>Moringa School</h3>
+                        <p>I decided to join Software development at Moringa School since pogramming is quite fundamental in Telecommunication.Almost every Network Element in Todays Telecom Infrastructure needs some kind of programming.</p>
+                    </div>
+                
+                 </div>
             </section>
     </body>
 </html>
