add heading and descriptive paragraph

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                  <div class="row">
                      <div class="edu-col">
                          <h3>High School</h3>
-                         <p>For my four High School years I studied in Precious Blood Riruta which is located in heart of Kawangware,Nairobi.I was admitted in PB after completing my Primary education at Lizar Schools Naivasha in 2015.</p>
+                         <p>For my four High School years I studied at Precious Blood Riruta which is located in heart of Kawangware,Nairobi.I was admitted in PB after completing my Primary education at Lizar Schools Naivasha in 2015.</p>
                      </div>
 
                      <div class="edu-col">
@@ -59,5 +59,12 @@
                 
                  </div>
             </section>
+            <!-----Portfolio----->
+            <section class="portfolio">
+                <h1>My Portfolio</h1>
+                <p>Below are some examples of my portfolio</p>
+            </section>
+
+
     </body>
 </html>
