--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
         <title>KOTOINE PERERUAN NABAALA</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" type="text/css" href="/home/kali/Documents/Portfolio/css/styles.css" media="screen">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;600;700&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
         <script src="/home/kali/Documents/Portfolio/js/scripts.js"></script>
+        <link rel="stylesheet" type="text/css" href="/home/kali/Documents/Portfolio/css/styles.css" media="screen">
     </head>
     <body>
         <section class="header">
@@ -63,6 +63,15 @@
             <section class="portfolio">
                 <h1>My Portfolio</h1>
                 <p>Below are some examples of my portfolio</p>
+                
+                <div class="row">
+                    <div class="portfolio-col">
+                    <img src="/home/kali/Documents/Portfolio/images/palm.jpg">
+                <div class="layer">
+                    <h3>HTML</h3>
+                </div>
+                </div>
+                </div>
             </section>
 
 
