add names for the column sections

--- a/index.html
+++ b/index.html
@@ -70,6 +70,18 @@
                 <div class="layer">
                     <h3>HTML</h3>
                 </div>
+                </div>  
+                <div class="portfolio-col">
+                    <img src="/home/kali/Documents/Portfolio/images/keyboard.jpg">
+                <div class="layer">
+                    <h3>CSS</h3>
+                </div>
+                </div>
+                <div class="portfolio-col">
+                    <img src="/home/kali/Documents/Portfolio/images/touch.jpg">
+                <div class="layer">
+                    <h3>JAVASCRIPT</h3>
+                </div>
                 </div>
                 </div>
             </section>
