--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <div class="text-box">
                     <h1>Kotoine Pereruan Nabaala</h1>
                     <p>I am a Kenyan based front-end developer who is skilled in HTML , CSS and Javascript.<br>I am also skilled in git , linux and bootstrap.I acquired my skills from Moringa School after attending their intensive 4 weeks remote learning program</p>
-                    <a href=""class="moringa-btn">Learn more about Moringa School</a>
+                    <a href="https://moringaschool.com/"class="moringa-btn">Learn more about Moringa School</a>
                 </div>
                 </section> 
                 <!------ About ------->
@@ -46,7 +46,6 @@
                          <h3>High School</h3>
                          <p>For my four High School years I studied at Precious Blood Riruta which is located in heart of Kawangware,Nairobi.I was admitted in PB after completing my Primary education at Lizar Schools Naivasha in 2015.</p>
                      </div>
-
                      <div class="edu-col">
                         <h3>University</h3>
                         <p>I am currently undertaking my Bachelor's Degree in Telecommunication at Kabarak University.Telecommunications is the means of electronic transmission of information over distances. The information may be in the form of voice telephone calls, data, text, images, or video. These networks themselves are run by computers.</p>
@@ -59,6 +58,7 @@
                 
                  </div>
             </section>
+
             <!-----Portfolio----->
             <section class="portfolio">
                 <h1>My Portfolio</h1>
@@ -86,6 +86,30 @@
                 </div>
             </section>
 
+            <!-------Facilities------>
+         <section class="facilities">
+            <h1>Technical Facilities</h1>
+            <p>Below are the technical facilities I use in Web Devlopment</p>
 
+            <div class="row">
+            <div class="facilities-col">
+                <img src="/home/kali/Documents/Portfolio/images/git.jpg">
+                <h3>GIT</h3>
+                <p>Git is a software for tracking changes in any set of files, usually used for coordinating work among programmers collaboratively developing source code during software development. Its goals include speed, data integrity, and support for distributed, non-linear workflows</p>       
+            </div>
+
+            <div class="facilities-col">
+                <img src="/home/kali/Documents/Portfolio/images/github.jpg">
+                <h3>GITHUB</h3>
+                <p>GitHub, Inc. is a provider of Internet hosting for software development and version control using Git. It offers the distributed version control and source code management functionality of Git, plus its own features</p>       
+            </div>
+
+            <div class="facilities-col">
+                <img src="/home/kali/Documents/Portfolio/images/linux.jpg">
+                <h3>LINUX</h3>
+                <p>Linux is a family of open-source Unix-like operating systems based on the Linux kernel, an operating system kernel first released on September 17, 1991, by Linus Torvalds. Linux is typically packaged in a Linux distribution.</p>       
+            </div>
+            </div>
+         </section>
     </body>
 </html>
