add background gradient and background-image hover effect in hire button

--- a/index.html
+++ b/index.html
@@ -143,9 +143,14 @@
          </div>
         </div>
         </section>
-        <section class="contact">
-        <h1>Contact Me</h1>
-        <a href="">HIRE ME</a>
-        </section>
+
+        <!---------Contact-------->
+
+       <section class="contact">
+           <h1>You can contact me from any<br>part of this world</h1>
+           <a href="" class="hire-btn">HIRE ME</a>
+       </section>
+
+       <!--------footer---------->
     </body>
 </html>
