add an about me and icons and an extra div

--- a/index.html
+++ b/index.html
@@ -152,5 +152,17 @@
        </section>
 
        <!--------footer---------->
+    
+      <section class="footer">
+          <h4>About Me</h4>
+          <p>I like solving problems since that is what my career is about,to solve world problems through program.I am open-minded and adapts to changes very<br>fast and I think that's what makes me a better developer.As a developer I am not afraid to try and experiment.</p> 
+          <div class="icons">
+              <i class="fa fa-facebook"></i>
+              <i class="fa fa-twitter"></i>
+              <i class="fa fa-linkedin"></i>
+              <i class="fa fa-instagram"></i>
+         </div>
+      <p><i class="fa fa-users"></i>Technology is best when it brings people together.<i class="fa fa-users"></i></p>
+        </section>
     </body>
 </html>
