add background image and linaer-gradient wuth a height of 50vh and add a front-end Developer title together with a descriptive paragraph

--- a/index.html
+++ b/index.html
@@ -20,10 +20,8 @@
              <div class="nav-links" id="navLinks">
               <i class="fa fa-times" onclick="hideMenu()"></i>
                 <ul>
-                    <li><a href="">HOME</a></li>
-                    <li><a href="">ABOUT</a></li>
-                    <li><a href="">EDUCATION</a></li>
-                    <li><a href="">BLOG</a></li>
+                    <li><a href="file:///home/kali/Documents/Portfolio/index.html">HOME</a></li>
+                    <li><a href="file:///home/kali/Documents/Portfolio/about.html">ABOUT</a></li>
                     <li><a href="">CONTACT</a></li>
                 </ul>
                 </div>
@@ -35,7 +33,7 @@
                     <a href="https://moringaschool.com/"class="moringa-btn">Learn more about Moringa School</a>
                 </div>
                 </section> 
-                <!------ About ------->
+                <!------ Educational Background------->
             
             <section class="edu">
                  <h1>Educational Background</h1>
@@ -122,11 +120,11 @@
              <div>
                <p>I was happy about the services I received.</p>
                <h3>Susan</h3>
-               <i class="fa fa-star" aria-hidden></i>
-               <i class="fa fa-star" aria-hidden></i>
-               <i class="fa fa-star" aria-hidden></i>
-               <i class="fa fa-star" aria-hidden></i>
-               <i class="fa fa-star-o" aria-hidden></i>
+               <i class="fa fa-star"></i>
+               <i class="fa fa-star"></i>
+               <i class="fa fa-star"></i>
+               <i class="fa fa-star"></i>
+               <i class="fa fa-star-o"></i>
              </div>
            </div>
           <div class="testimonials-col">
@@ -134,11 +132,11 @@
             <div>
                <p>My request were met in urgent time and i couldnt be more happier.</p>
                <h3>Cindy</h3>
-               <i class="fa fa-star" aria-hidden></i>
-               <i class="fa fa-star" aria-hidden></i>
-               <i class="fa fa-star" aria-hidden></i>
-               <i class="fa fa-star" aria-hidden></i>
-               <i class="fa fa-star-half-o" aria-hidden></i>
+               <i class="fa fa-star"></i>
+               <i class="fa fa-star"></i>
+               <i class="fa fa-star"></i>
+               <i class="fa fa-star"></i>
+               <i class="fa fa-star-half-o"></i>
             </div>
          </div>
         </div>
@@ -148,7 +146,7 @@
 
        <section class="contact">
            <h1>You can contact me from any<br>part of this world</h1>
-           <a href="" class="hire-btn">HIRE ME</a>
+           <a href="" class="hire-btn">CONTACT ME</a>
        </section>
 
        <!--------footer---------->
