add contact title and location map link together with contacts info

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
              <div class="nav-links" id="navLinks">
               <i class="fa fa-times" onclick="hideMenu()"></i>
                 <ul>
-                    <li><a href="file:///home/kali/Documents/Portfolio/index.html">HOME</a></li>
-                    <li><a href="file:///home/kali/Documents/Portfolio/about.html">ABOUT</a></li>
+                    <li><a href="">HOME</a></li>
+                    <li><a href="">ABOUT</a></li>
                     <li><a href="">CONTACT</a></li>
                 </ul>
                 </div>
@@ -29,7 +29,7 @@
                 </nav>
                 <div class="text-box">
                     <h1>Kotoine Pereruan Nabaala</h1>
-                    <p>I am a Kenyan based front-end developer who is skilled in HTML , CSS and Javascript.<br>I am also skilled in git , linux and bootstrap.I acquired my skills from Moringa School after attending their intensive 4 weeks remote learning program</p>
+                    <p>I'm a front-developer from Kenya,<br>passionate about software development</p>
                     <a href="https://moringaschool.com/"class="moringa-btn">Learn more about Moringa School</a>
                 </div>
                 </section> 
@@ -146,7 +146,7 @@
 
        <section class="contact">
            <h1>You can contact me from any<br>part of this world</h1>
-           <a href="" class="hire-btn">CONTACT ME</a>
+           <a href="file:///home/kali/Documents/Portfolio/contact.html" class="hire-btn">CONTACT ME</a>
        </section>
 
        <!--------footer---------->
