changed alignment of html codes

--- a/about.html
+++ b/about.html
@@ -16,45 +16,45 @@
         <section class="sub-header">
             <nav>
                 <a href="index.html"><img src="images/bull.png"></a>
-             <div class="nav-links" id="navLinks">
-                <i class="fa fa-bars" onclick="hideMenu()"></i>
-                <ul>
-                    <li><a href="index.html">HOME</a></li>
-                    <li><a href="about.html">ABOUT</a></li>
-                    <li><a href="contact.html">CONTACT</a></li>
-                </ul>
+                <div class="nav-links" id="navLinks">
+                    <i class="fa fa-bars" onclick="hideMenu()"></i>
+                    <ul>
+                        <li><a href="index.html">HOME</a></li>
+                        <li><a href="about.html">ABOUT</a></li>
+                        <li><a href="contact.html">CONTACT</a></li>
+                    </ul>
                 </div>
                 <i class="fa fa-bars" onclick="showMenu()"></i>
-                </nav>
-                <h1>About Me</h1>
-            </section>
+            </nav>
+            <h1>About Me</h1>
+        </section>
 
-        
-                <!-----about-------->
-                <section class="about-me">
-                    <div class="row">
-                        <div class="about-col">
-                              <h1>Front-end Developer</h1>
-                              <p>Front-end web development, also known as client-side development is the practice of producing HTML, CSS and JavaScript for a website or Web Application so that a user can see and interact with them directly.</p>
-                              <a href="https://github.com/pereruannabaala" class="github-btn yellow-btn">Visit my Github</a>
-                        </div>
-                        <div class="about-col">
-                              <img src="images/float.jpg">
-                        </div>
-                    </div>
+<!--about-->
 
-       <!--------footer---------->
-    
-      <section class="footer">
-          <h4>About Me</h4>
-          <p>I'm a front-developer from Kenya,<br>passionate about software development</p> 
-          <div class="icons">
-              <i class="fa fa-github"></i>
-              <i class="fa fa-twitter"></i>
-              <i class="fa fa-slack"></i>
-              <i class="fa fa-instagram"></i>
-         </div>
-      <p><i class="fa fa-users"></i>Technology is best when it brings people together.<i class="fa fa-users"></i></p>
+        <section class="about-me">
+            <div class="row">
+                <div class="about-col">
+                    <h1>Front-end Developer</h1>
+                    <p>Front-end web development, also known as client-side development is the practice of producing HTML, CSS and JavaScript for a website or Web Application so that a user can see and interact with them directly.</p>
+                    <a href="https://github.com/pereruannabaala" class="github-btn yellow-btn">Visit my Github</a>
+                </div>
+                <div class="about-col">
+                    <img src="images/float.jpg">
+                </div>
+            </div>
+        </section>    
+
+<!--footer-->
+        <section class="footer">
+            <h4>About Me</h4>
+            <p>I'm a front-developer from Kenya,<br>passionate about software development</p> 
+            <div class="icons">
+                <i class="fa fa-github"></i>
+                <i class="fa fa-twitter"></i>
+                <i class="fa fa-slack"></i>
+                <i class="fa fa-instagram"></i>
+            </div>
+            <p><i class="fa fa-users"></i>Technology is best when it brings people together.<i class="fa fa-users"></i></p>
         </section>
     </body>
     <script src="js/scripts.js"></script>
