--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             </nav>
             <div class="text-box">
                 <h1>Kotoine Pereruan Nabaala</h1>
-                <p>I'm a front-developer from Kenya,passionate about software developm<br>ent.I acquired my skills from Moringa school which is located at Ngong Lane,Kenya</p>
+                <p>I'm a Python/Flask developer from Kenya,passionate about software developm<br>ent.I acquired my front-end skills from Moringa School and later futhered my software<br>development skills at TechCamp Kenya where I learnt Python/Flask.</p>
                 <a href="https://moringaschool.com/"class="moringa-btn">Learn more about Moringa School</a>
             </div>
         </section> 
